2008-12-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/app/gstappsrc.c: (gst_app_src_class_init),
	(gst_app_src_init), (gst_app_src_set_property),
	(gst_app_src_get_property), (gst_app_src_query),
	(gst_app_src_set_latencies), (gst_app_src_set_latency),
	(gst_app_src_get_latency), (gst_app_src_push_buffer_full):
	* gst-libs/gst/app/gstappsrc.h:
	Add properties and methods to configure and retrieve the min and max
	latencies.

2008-12-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Sebastian Pölsterl <sebp at k-d-w dot org>

	* gst/mpegdemux/mpegtspacketizer.c: (mpegts_packetizer_parse_eit):
	Fix memleak. Fixes #565614.

2008-12-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Sebastian Pölsterl <sebp at k-d-w dot org>

	* gst/mpegdemux/mpegtspacketizer.c: (mpegts_packetizer_parse_sdt):
	Add a scrambled field to the service structures retrieved from SDT to
	determine if a channel is scrambled. Fixes #565613.

2008-12-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

	* gst/pcapparse/Makefile.am:
	* gst/pcapparse/gstpcapparse.c:
	Patch to make gstpcapparse compile with mingw32 gcc. Fixes #565439.

2008-12-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_getcaps_send_rtp):
	Use method to get the internal SSRC.

	* gst/rtpmanager/rtpsession.c: (rtp_session_class_init),
	(rtp_session_set_property), (rtp_session_get_property):
	Add property to congiure the internal SSRC of the session.
	Fixes #565910.

2008-12-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/rtpsession.c: (rtp_session_class_init),
	(rtp_session_set_property), (rtp_session_get_property):
	Add property to change the internal SSRC of the session.

2008-12-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/rtpsession.c: (rtp_session_set_internal_ssrc):
	Only change the SSRC of the session and reset the internal source when